--- a/src/main/java/views/loginView.fxml
+++ b/src/main/java/views/loginView.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="750.0" prefWidth="1060.0" style="-fx-background-color: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, #36393f 0%, #202225 200%);;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<AnchorPane prefHeight="750.0" prefWidth="1060.0" style="-fx-background-color: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, #36393f 0%, #202225 200%);;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.LoginController">
     <children>
       <HBox alignment="CENTER" prefHeight="750.0" prefWidth="1060.0">
          <children>
