--- a/src/main/java/views/pictureEditView.fxml
+++ b/src/main/java/views/pictureEditView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<DialogPane fx:id="dialogPane" contentText="Edit picture" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PictureEditController">
+<DialogPane fx:id="dialogPane" contentText="Edit picture" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.PictureEditController">
     <content>
        <VBox>
             <GridPane HBox.hgrow="ALWAYS">
